tests/types/errors/dataset_where_non_bool.mochi
let people = [{ name: "Alice", age: 30 }]
let result = from p in people where 123 select p
